--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,7 @@ set -g status-justify left
 set -g base-index 1
 set -g pane-base-index 1
 set -g renumber-windows on
+set -g status-interval 10
 
 
 
