--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,10 +4,13 @@ set-option -g history-limit 5000
 set-option -g set-clipboard on
 
 set-option -g mode-keys vi
-bind-key -T copy-mode-vi 'v' send -X begin-selection
+#bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'V' send -X select-line
 bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
-bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+#bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 bind P paste-buffer
 
 # split panes using | and -
@@ -28,6 +31,7 @@ set -g base-index 1
 set -g pane-base-index 1
 set -g renumber-windows on
 set -g status-interval 10
+set -g focus-events on
 
 
 
