--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,6 +26,8 @@ bind-key C-a last-window
 bind a send-prefix
 set -g mouse on
 set -g status-justify left
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
 
 set -g base-index 1
 set -g pane-base-index 1
