--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,6 +35,8 @@ set -g renumber-windows on
 set -g status-interval 10
 set -g focus-events on
 
+set-option -g allow-rename off
+
 
 
 # See: https://github.com/christoomey/vim-tmux-navigator
