--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,6 +68,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
 set -g @resurrect-strategy-vim 'session'
+set -g @continuum-save-interval '5'
 #set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
