--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,6 @@
 set -g default-terminal "screen-256color"
+#set -g default-terminal "xterm-256color-italic"
+#set -ga terminal-overrides ",xterm-256color-italic:Tc"
 unbind C-b
 set-option -g history-limit 5000
 set-option -g set-clipboard on
