fix tmux resurrect location by host, update PATH/history handling on lxplus

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,5 +75,7 @@ set -g @resurrect-strategy-vim 'session'
 set -g @continuum-save-interval '5'
 #set -g @continuum-restore 'on'
 
+set -g @resurrect-dir '$HOME/.tmux/resurrect/$HOSTNAME'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
