--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,7 +34,7 @@ bind-key -n C-S-Right swap-window -t +1
 set -g base-index 1
 set -g pane-base-index 1
 set -g renumber-windows on
-set -g status-interval 10
+set -g status-interval 2
 set -g focus-events on
 
 set-option -g allow-rename off
@@ -70,6 +70,7 @@ set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
 set -g @resurrect-strategy-vim 'session'
 set -g @continuum-save-interval '5'
