drop tmuxline in vim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -52,13 +52,23 @@ bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 # restore overwritten C-l binding (clear screen)
 
+set -g status-left-length 40
+
+set -g status-left '#[fg=colour232,bg=colour247] #S #[fg=colour247,bg=colour239]#[fg=colour249,bg=colour239] #(whoami) #[fg=colour239,bg=colour236]   '
+set -g status-right '#{battery_percentage} #{battery_remain}  #(tmux-mem-cpu-load --interval 10 -a 0 -g0) #[fg=colour239]#[fg=colour249,bg=colour239] %H:%M %a %d/%m/%Y #[fg=colour247]#[fg=colour232,bg=colour247] #h '
+
+set -g window-status-format "#[fg=colour247,bg=colour236]  #I#[fg=colour247]  #[bg=colour236]#W  "
+set -g window-status-current-format "#[fg=colour236,bg=colour239]#[fg=colour249,bg=colour239] #I  #[fg=colour231]#W #[fg=colour239,bg=colour236]"
+
+set -g status-fg colour249
+set -g status-bg colour236
 
 bind-key -n S-left previous-window
 bind-key -n S-right next-window
 
 set -g @shell_mode 'vi'
 
-source-file ~/dotfiles/tmuxline
+#source-file ~/dotfiles/tmuxline
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -71,6 +81,7 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'thewtex/tmux-mem-cpu-load'
+set -g @plugin 'tmux-plugins/tmux-battery'
 
 set -g @resurrect-strategy-vim 'session'
 set -g @continuum-save-interval '5'
