--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,6 +53,7 @@ bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 # restore overwritten C-l binding (clear screen)
 
 set -g status-left-length 40
+set -g status-right-length 80
 
 set -g status-left '#[fg=colour232,bg=colour247] #S #[fg=colour247,bg=colour239]#[fg=colour249,bg=colour239] #(whoami) #[fg=colour239,bg=colour236]   '
 set -g status-right '#{battery_percentage} #{battery_remain}  #(tmux-mem-cpu-load --interval 10 -a 0 -g0) #[fg=colour239]#[fg=colour249,bg=colour239] %H:%M %a %d/%m/%Y #[fg=colour247]#[fg=colour232,bg=colour247] #h '
