--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,15 +1,17 @@
-set -g default-terminal "screen-256color"
-#set -g default-terminal "xterm-256color-italic"
-#set -ga terminal-overrides ",xterm-256color-italic:Tc"
+# By default "default-terminal" is screen
+# Using "tmux-256color" enables features like italic
+set-option -g default-terminal "tmux-256color"
+# Tell tmux that "xterm-256color" (the terminal emulator outside tmux) supports true color
+set-option -g terminal-overrides ",xterm-256color:RGB"
+
+
 unbind C-b
 set-option -g history-limit 5000
 set-option -g set-clipboard on
 
 set-option -g mode-keys vi
-#bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'V' send -X select-line
 bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
-#bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
@@ -51,6 +53,8 @@ bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 # restore overwritten C-l binding (clear screen)
+
+#set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
 
 set -g status-left-length 40
 set -g status-right-length 80
