--- a/.tmux.conf
+++ b/.tmux.conf
@@ -88,6 +88,8 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-battery'
 
+set -g @plugin "arcticicestudio/nord-tmux"
+
 set -g @resurrect-strategy-vim 'session'
 set -g @continuum-save-interval '5'
 #set -g @continuum-restore 'on'
