--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,14 +59,20 @@ bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 set -g status-left-length 40
 set -g status-right-length 80
 
-set -g status-left '#[fg=colour232,bg=colour247] #S #[fg=colour247,bg=colour239]#[fg=colour249,bg=colour239] #(whoami) #[fg=colour239,bg=colour236]   '
-set -g status-right '#{battery_percentage} #{battery_remain}  #(tmux-mem-cpu-load --interval 10 -a 0 -g0) #[fg=colour239]#[fg=colour249,bg=colour239] %H:%M %a %d/%m/%Y #[fg=colour247]#[fg=colour232,bg=colour247] #h '
+# COLOR: grey
+# set -g status-left '#[fg=colour232,bg=colour247] #S #[fg=colour247,bg=colour239]#[fg=colour249,bg=colour239] #(whoami) #[fg=colour239,bg=colour236]   '
+# set -g status-right '#{battery_percentage} #{battery_remain}  #(tmux-mem-cpu-load --interval 10 -a 0 -g0) #[fg=colour239]#[fg=colour249,bg=colour239] %H:%M %a %d/%m/%Y #[fg=colour247]#[fg=colour232,bg=colour247] #h '
+# set -g window-status-format "#[fg=colour247,bg=colour236]  #I#[fg=colour247]  #[bg=colour236]#W  "
+# set -g window-status-current-format "#[fg=colour236,bg=colour239]#[fg=colour249,bg=colour239] #I  #[fg=colour231]#W #[fg=colour239,bg=colour236]"
 
-set -g window-status-format "#[fg=colour247,bg=colour236]  #I#[fg=colour247]  #[bg=colour236]#W  "
-set -g window-status-current-format "#[fg=colour236,bg=colour239]#[fg=colour249,bg=colour239] #I  #[fg=colour231]#W #[fg=colour239,bg=colour236]"
+# COLOS: nord
+set -g status-left '#[fg=black,bg=blue,bold] #S #[fg=blue,bg=brightblack,nobold]#[fg=blue,bg=brightblack] #(whoami) #[fg=brightblack,bg=black]   '
+set -g status-right '#[fg=blue]#{battery_percentage} #{battery_remain}  #(tmux-mem-cpu-load --interval 10 -a 0 -g0) #[fg=brightblack,bg=black]#[fg=blue,bg=brightblack] %H:%M %a %d/%m/%Y #[fg=blue]#[fg=black,bg=blue,bold] #h '
+set -g window-status-format "#[fg=black,bg=brightblack]#[fg=white,bg=brightblack] #I#[fg=white]  #[bg=brightblack]#W #[fg=brightblack,bg=black]"
+set -g window-status-current-format "#[fg=black,bg=cyan]#[fg=black,bg=cyan,bold] #I  #[fg=black]#W #[fg=cyan,bg=black,nobold]"
 
 set -g status-fg colour249
-set -g status-bg colour236
+set -g status-bg black
 
 bind-key -n S-left previous-window
 bind-key -n S-right next-window
@@ -88,7 +94,6 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'tmux-plugins/tmux-battery'
 
-set -g @plugin "arcticicestudio/nord-tmux"
 
 set -g @resurrect-strategy-vim 'session'
 set -g @continuum-save-interval '5'
