--- a/.tigrc
+++ b/.tigrc
@@ -123,6 +123,8 @@ set mouse			= no		# Enable mouse support?
 set mouse-scroll		= 3		# Number of lines to scroll via the mouse
 set mouse-wheel-cursor		= no		# Prefer moving the cursor to scrolling the view?
 
+set main-view-id = yes
+
 # User-defined commands
 # ---------------------
 # These commands allow to run shell commands directly from within Tig.
