--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,7 @@
 set-option -g default-terminal "tmux-256color"
 # Tell tmux that "xterm-256color" (the terminal emulator outside tmux) supports true color
 set-option -g terminal-overrides ",xterm-256color:RGB"
+# set-option -ga terminal-overrides ',*256col*:RGB:sitm=\E[3m:ritm=\E[23m'
 
 
 unbind C-b
@@ -51,7 +52,7 @@ bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+# bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 # restore overwritten C-l binding (clear screen)
 
 #set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
