--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,6 @@
 set-option -g default-terminal "tmux-256color"
 # Tell tmux that "xterm-256color" (the terminal emulator outside tmux) supports true color
 set-option -g terminal-overrides ",xterm-256color:RGB"
-# set-option -ga terminal-overrides ',*256col*:RGB:sitm=\E[3m:ritm=\E[23m'
 
 
 unbind C-b
@@ -66,13 +65,21 @@ set -g status-right-length 80
 # set -g window-status-format "#[fg=colour247,bg=colour236]  #I#[fg=colour247]  #[bg=colour236]#W  "
 # set -g window-status-current-format "#[fg=colour236,bg=colour239]#[fg=colour249,bg=colour239] #I  #[fg=colour231]#W #[fg=colour239,bg=colour236]"
 
-# COLOS: nord
+# COLORS: nord
+
 set -g status-left '#[fg=black,bg=blue,bold] #S #[fg=blue,bg=brightblack,nobold]#[fg=blue,bg=brightblack] #(whoami) #[fg=brightblack,bg=black]   '
-set -g status-right '#[fg=blue]#{battery_percentage} #{battery_remain}  #(tmux-mem-cpu-load --interval 10 -a 0 -g0) #[fg=brightblack,bg=black]#[fg=blue,bg=brightblack] %H:%M %a %d/%m/%Y #[fg=blue]#[fg=black,bg=blue,bold] #h '
+set -g status-right '#[fg=blue] #[fg=brightblack,bg=black]#[fg=blue,bg=brightblack] %H:%M %a %d/%m/%Y #[fg=blue]#[fg=black,bg=blue,bold] #h '
+# set -g status-right '#[fg=blue]#{battery_percentage} #{battery_remain}  #(tmux-mem-cpu-load --interval 10 -a 0 -g0) #[fg=brightblack,bg=black]#[fg=blue,bg=brightblack] %H:%M %a %d/%m/%Y #[fg=blue]#[fg=black,bg=blue,bold] #h '
 set -g window-status-format "#[fg=black,bg=brightblack]#[fg=white,bg=brightblack] #I#[fg=white]  #[bg=brightblack]#W #[fg=brightblack,bg=black]"
 set -g window-status-current-format "#[fg=black,bg=cyan]#[fg=black,bg=cyan,bold] #I  #[fg=black]#W #[fg=cyan,bg=black,nobold]"
 
-set -g status-fg colour249
+# COLORS: gruvbox light
+# set -g status-left '#[fg=black,bg=colour7,bold] #S #[fg=colour7,bg=colour8,nobold]#[fg=colour15,bg=colour228] #(whoami) #[fg=brightblack,bg=black]   '
+# set -g status-right '#[fg=gray]#{battery_percentage} #{battery_remain}  #(tmux-mem-cpu-load --interval 10 -a 0 -g0) #[fg=brightblack,bg=black]#[fg=gray,bg=brightblack] %H:%M %a %d/%m/%Y #[fg=gray]#[fg=black,bg=gray,bold] #h '
+# set -g window-status-format "#[fg=black,bg=brightblack]#[fg=white,bg=brightblack] #I#[fg=white]  #[bg=brightblack]#W #[fg=brightblack,bg=black]"
+# set -g window-status-current-format "#[fg=black,bg=cyan]#[fg=black,bg=cyan,bold] #I  #[fg=black]#W #[fg=cyan,bg=black,nobold]"
+
+set -g status-fg colour237
 set -g status-bg black
 
 bind-key -n S-left previous-window
