--- a/.tmux.conf
+++ b/.tmux.conf
@@ -66,21 +66,25 @@ set -g status-right-length 80
 # set -g window-status-current-format "#[fg=colour236,bg=colour239]#[fg=colour249,bg=colour239] #I  #[fg=colour231]#W #[fg=colour239,bg=colour236]"
 
 # COLORS: nord
-
-set -g status-left '#[fg=black,bg=blue,bold] #S #[fg=blue,bg=brightblack,nobold]#[fg=blue,bg=brightblack] #(whoami) #[fg=brightblack,bg=black]   '
-set -g status-right '#[fg=blue] #[fg=brightblack,bg=black]#[fg=blue,bg=brightblack] %H:%M %a %d/%m/%Y #[fg=blue]#[fg=black,bg=blue,bold] #h '
-# set -g status-right '#[fg=blue]#{battery_percentage} #{battery_remain}  #(tmux-mem-cpu-load --interval 10 -a 0 -g0) #[fg=brightblack,bg=black]#[fg=blue,bg=brightblack] %H:%M %a %d/%m/%Y #[fg=blue]#[fg=black,bg=blue,bold] #h '
-set -g window-status-format "#[fg=black,bg=brightblack]#[fg=white,bg=brightblack] #I#[fg=white]  #[bg=brightblack]#W #[fg=brightblack,bg=black]"
-set -g window-status-current-format "#[fg=black,bg=cyan]#[fg=black,bg=cyan,bold] #I  #[fg=black]#W #[fg=cyan,bg=black,nobold]"
-
-# COLORS: gruvbox light
-# set -g status-left '#[fg=black,bg=colour7,bold] #S #[fg=colour7,bg=colour8,nobold]#[fg=colour15,bg=colour228] #(whoami) #[fg=brightblack,bg=black]   '
-# set -g status-right '#[fg=gray]#{battery_percentage} #{battery_remain}  #(tmux-mem-cpu-load --interval 10 -a 0 -g0) #[fg=brightblack,bg=black]#[fg=gray,bg=brightblack] %H:%M %a %d/%m/%Y #[fg=gray]#[fg=black,bg=gray,bold] #h '
+# set -g status-left '#[fg=black,bg=blue,bold] #S #[fg=blue,bg=brightblack,nobold]#[fg=blue,bg=brightblack] #(whoami) #[fg=brightblack,bg=black]   '
+# set -g status-right '#[fg=blue] #[fg=brightblack,bg=black]#[fg=blue,bg=brightblack] %H:%M %a %d/%m/%Y #[fg=blue]#[fg=black,bg=blue,bold] #h '
 # set -g window-status-format "#[fg=black,bg=brightblack]#[fg=white,bg=brightblack] #I#[fg=white]  #[bg=brightblack]#W #[fg=brightblack,bg=black]"
 # set -g window-status-current-format "#[fg=black,bg=cyan]#[fg=black,bg=cyan,bold] #I  #[fg=black]#W #[fg=cyan,bg=black,nobold]"
 
+# COLORS: gruvbox dark
+# set -g status-left '#[fg=black,bg=blue,bold] #S #[fg=blue,bg=brightblack,nobold]#[fg=blue,bg=brightblack] #(whoami) #[fg=brightblack,bg=black]   '
+# set -g status-right '#[fg=blue] #[fg=brightblack,bg=black]#[fg=blue,bg=brightblack] %H:%M %a %d/%m/%Y #[fg=blue]#[fg=black,bg=blue,bold] #h '
+# set -g window-status-format "#[fg=black,bg=brightblack]#[fg=white,bg=brightblack] #I#[fg=white]  #[bg=brightblack]#W #[fg=brightblack,bg=black]"
+# set -g window-status-current-format "#[fg=black,bg=cyan]#[fg=black,bg=cyan,bold] #I  #[fg=black]#W #[fg=cyan,bg=black,nobold]"
+
+# COLORS: gruvbox light
+set -g status-left '#[fg=black,bg=colour7,bold] #S #[fg=colour7,bg=colour239,nobold]#[fg=color229,bg=colour239] #(whoami) #[fg=color239,bg=color237]   '
+set -g status-right '#[fg=color239,bg=color237]#[fg=color7,bg=color239] %H:%M %a %d/%m/%Y #[fg=color7]#[fg=black,bg=color7,bold] #h '
+set -g window-status-format "#[fg=color237,bg=color239]#[fg=white,bg=color239] #I#[fg=white]  #[bg=color239]#W #[fg=color239,bg=color237]"
+set -g window-status-current-format "#[fg=color237,bg=color109]#[fg=black,bg=color109,bold] #I  #[fg=black]#W #[fg=color109,bg=color237,nobold]"
+
 set -g status-fg colour237
-set -g status-bg black
+set -g status-bg color237
 
 bind-key -n S-left previous-window
 bind-key -n S-right next-window
