--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 # By default "default-terminal" is screen
 # Using "tmux-256color" enables features like italic
 set-option -g default-terminal "tmux-256color"
+# set-option -g default-terminal "xterm-256color"
 # Tell tmux that "xterm-256color" (the terminal emulator outside tmux) supports true color
 set-option -g terminal-overrides ",xterm-256color:RGB"
 
@@ -23,8 +24,10 @@ bind - split-window -v
 unbind '"'
 unbind %
 
+bind-key -n Home send Escape "OH"
+bind-key -n End send Escape "OF"
 
-set-window-option -g xterm-keys on
+set-window-option -g xterm-keys off
 set -g prefix C-a
 bind-key C-a last-window
 bind a send-prefix
@@ -98,17 +101,17 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Other examples:
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+# set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'tmux-plugins/tmux-open'
+# set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
-set -g @plugin 'tmux-plugins/tmux-battery'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'thewtex/tmux-mem-cpu-load'
+# set -g @plugin 'tmux-plugins/tmux-battery'
 
 
 set -g @resurrect-strategy-vim 'session'
-set -g @continuum-save-interval '5'
+# set -g @continuum-save-interval '5'
 #set -g @continuum-restore 'on'
 
 set -g @resurrect-dir '$HOME/.tmux/resurrect/$HOSTNAME'
