--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,12 +82,12 @@ set -g status-right-length 80
 
 # COLORS: gruvbox light
 set -g status-left '#[fg=black,bg=colour7,bold] #S #[fg=colour7,bg=colour239,nobold]#[fg=color7,bg=colour239] #(whoami) #[fg=color239,bg=color237]   '
-set -g status-right '#[fg=color239,bg=color237]#[fg=color7,bg=color239] %H:%M %a %d/%m/%Y #[fg=color7]#[fg=black,bg=color7,bold] #h '
-set -g window-status-format "#[fg=color237,bg=color239]#[fg=white,bg=color239] #I#[fg=white]  #[bg=color239]#W #[fg=color239,bg=color237]"
-set -g window-status-current-format "#[fg=color237,bg=color109]#[fg=black,bg=color109,bold] #I  #[fg=black]#W #[fg=color109,bg=color237,nobold]"
+set -g status-right '#[fg=colour239,bg=colour237]#[fg=colour7,bg=colour239] %H:%M %a %d/%m/%Y #[fg=colour7]#[fg=black,bg=colour7,bold] #h '
+set -g window-status-format "#[fg=colour237,bg=colour239]#[fg=white,bg=colour239] #I#[fg=white]  #[bg=colour239]#W #[fg=colour239,bg=colour237]"
+set -g window-status-current-format "#[fg=colour237,bg=colour109]#[fg=black,bg=colour109,bold] #I  #[fg=black]#W #[fg=colour109,bg=colour237,nobold]"
 
 set -g status-fg colour237
-set -g status-bg color237
+set -g status-bg colour237
 
 bind-key -n S-left previous-window
 bind-key -n S-right next-window
