get hostname from config on macos

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,7 +82,7 @@ set -g status-right-length 80
 
 # COLORS: gruvbox light
 set -g status-left '#[fg=black,bg=colour7,bold] #S #[fg=colour7,bg=colour239,nobold]#[fg=colour7,bg=colour239] #(whoami) #[fg=colour239,bg=colour237]   '
-set -g status-right '#[fg=colour239,bg=colour237]#[fg=colour7,bg=colour239] %H:%M %a %d/%m/%Y #[fg=colour7]#[fg=black,bg=colour7,bold] #h '
+set -g status-right '#[fg=colour239,bg=colour237]#[fg=colour7,bg=colour239] %H:%M %a %d/%m/%Y #[fg=colour7]#[fg=black,bg=colour7,bold] #($HOME/dotfiles/hostname.sh) '
 set -g window-status-format "#[fg=colour237,bg=colour239]#[fg=white,bg=colour239] #I#[fg=white]  #[bg=colour239]#W #[fg=colour239,bg=colour237]"
 set -g window-status-current-format "#[fg=colour237,bg=colour109]#[fg=black,bg=colour109,bold] #I  #[fg=black]#W #[fg=colour109,bg=colour237,nobold]"
 
