--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ set-option -g terminal-overrides ",xterm-256color:RGB"
 
 
 unbind C-b
-set-option -g history-limit 5000
+set-option -g history-limit 50000
 set-option -g set-clipboard on
 
 set-option -g mode-keys vi
@@ -59,6 +59,8 @@ bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 
 #set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
 
+set-option -g status "on"
+
 set -g status-left-length 40
 set -g status-right-length 80
 
@@ -74,20 +76,22 @@ set -g status-right-length 80
 # set -g window-status-format "#[fg=black,bg=brightblack]#[fg=white,bg=brightblack] #I#[fg=white]  #[bg=brightblack]#W #[fg=brightblack,bg=black]"
 # set -g window-status-current-format "#[fg=black,bg=cyan]#[fg=black,bg=cyan,bold] #I  #[fg=black]#W #[fg=cyan,bg=black,nobold]"
 
-# COLORS: gruvbox dark
-# set -g status-left '#[fg=black,bg=blue,bold] #S #[fg=blue,bg=brightblack,nobold]#[fg=blue,bg=brightblack] #(whoami) #[fg=brightblack,bg=black]   '
-# set -g status-right '#[fg=blue] #[fg=brightblack,bg=black]#[fg=blue,bg=brightblack] %H:%M %a %d/%m/%Y #[fg=blue]#[fg=black,bg=blue,bold] #h '
-# set -g window-status-format "#[fg=black,bg=brightblack]#[fg=white,bg=brightblack] #I#[fg=white]  #[bg=brightblack]#W #[fg=brightblack,bg=black]"
-# set -g window-status-current-format "#[fg=black,bg=cyan]#[fg=black,bg=cyan,bold] #I  #[fg=black]#W #[fg=cyan,bg=black,nobold]"
-
 # COLORS: gruvbox light
-set -g status-left '#[fg=black,bg=colour7,bold] #S #[fg=colour7,bg=colour239,nobold]#[fg=colour7,bg=colour239] #(whoami) #[fg=colour239,bg=colour237]   '
-set -g status-right '#[fg=colour239,bg=colour237]#[fg=colour7,bg=colour239] %H:%M %a %d/%m/%Y #[fg=colour7]#[fg=black,bg=colour7,bold] #($HOME/dotfiles/hostname.sh) '
-set -g window-status-format "#[fg=colour237,bg=colour239]#[fg=white,bg=colour239] #I#[fg=white]  #[bg=colour239]#W #[fg=colour239,bg=colour237]"
-set -g window-status-current-format "#[fg=colour237,bg=colour109]#[fg=black,bg=colour109,bold] #I  #[fg=black]#W #[fg=colour109,bg=colour237,nobold]"
+set -g status-left '#[fg=black,bg=#458588,bold] #S #[fg=#458588,bg=#7c6f64,nobold]#[fg=black,bg=#7c6f64] #(whoami) #[fg=#7c6f64,bg=#d5c4a1]   '
+set -g status-right '#[fg=#7c6f64,bg=#d5c4a1]#[fg=black,bg=#7c6f64] %H:%M %a %d/%m/%Y #[fg=#458588]#[fg=black,bg=#458588,bold] #h '
+set -g window-status-format "#[fg=#d5c4a1,bg=#a89984]#[fg=black] #I  #W #[fg=#a89984,bg=#d5c4a1]"
+set -g window-status-current-format "#[fg=#d5c4a1,bg=#458588]#[fg=black,bg=#458588,bold] #I  #W #[fg=#458588,bg=#d5c4a1,nobold]"
+set -g status-fg "black"
+set -g status-bg "#d5c4a1"
 
-set -g status-fg colour237
-set -g status-bg colour237
+# COLORS: gruvbox dark
+# set -g status-left '#[fg=black,bg=colour7,bold] #S #[fg=colour7,bg=colour239,nobold]#[fg=colour7,bg=colour239] #(whoami) #[fg=colour239,bg=colour237]   '
+# set -g status-right '#[fg=colour239,bg=colour237]#[fg=colour7,bg=colour239] %H:%M %a %d/%m/%Y #[fg=colour7]#[fg=black,bg=colour7,bold] #($HOME/dotfiles/hostname.sh) '
+# set -g window-status-format "#[fg=colour237,bg=colour239]#[fg=white,bg=colour239] #I#[fg=white]  #[bg=colour239]#W #[fg=colour239,bg=colour237]"
+# set -g window-status-current-format "#[fg=colour237,bg=colour109]#[fg=black,bg=colour109,bold] #I  #[fg=black]#W #[fg=colour109,bg=colour237,nobold]"
+# set -g status-fg colour237
+# set -g status-bg colour237
+
 
 bind-key -n S-left previous-window
 bind-key -n S-right next-window
@@ -95,6 +99,8 @@ bind-key -n S-right next-window
 set -g @shell_mode 'vi'
 
 #source-file ~/dotfiles/tmuxline
+
+# source-file "$HOME/dotfiles/tmux-gruvbox-light.conf"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
