switch to onedark-light

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -76,13 +76,8 @@ set -g status-right-length 80
 # set -g window-status-format "#[fg=black,bg=brightblack]#[fg=white,bg=brightblack] #I#[fg=white]  #[bg=brightblack]#W #[fg=brightblack,bg=black]"
 # set -g window-status-current-format "#[fg=black,bg=cyan]#[fg=black,bg=cyan,bold] #I  #[fg=black]#W #[fg=cyan,bg=black,nobold]"
 
-# COLORS: gruvbox light
-set -g status-left '#[fg=black,bg=#458588,bold] #S #[fg=#458588,bg=#7c6f64,nobold]#[fg=black,bg=#7c6f64] #(whoami) #[fg=#7c6f64,bg=#d5c4a1]   '
-set -g status-right '#[fg=#7c6f64,bg=#d5c4a1]#[fg=black,bg=#7c6f64] %H:%M %a %d/%m/%Y #[fg=#458588]#[fg=black,bg=#458588,bold] #h '
-set -g window-status-format "#[fg=#d5c4a1,bg=#a89984]#[fg=black] #I  #W #[fg=#a89984,bg=#d5c4a1]"
-set -g window-status-current-format "#[fg=#d5c4a1,bg=#458588]#[fg=black,bg=#458588,bold] #I  #W #[fg=#458588,bg=#d5c4a1,nobold]"
-set -g status-fg "black"
-set -g status-bg "#d5c4a1"
+# source-file "$HOME/dotfiles/tmux.gruvbox-light.conf"
+source-file "$HOME/dotfiles/tmux.onedark-light.conf"
 
 # COLORS: gruvbox dark
 # set -g status-left '#[fg=black,bg=colour7,bold] #S #[fg=colour7,bg=colour239,nobold]#[fg=colour7,bg=colour239] #(whoami) #[fg=colour239,bg=colour237]   '
