--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,8 +19,8 @@ bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 bind P paste-buffer
 
 # split panes using | and -
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
