--- a/.tmux.conf
+++ b/.tmux.conf
@@ -77,7 +77,7 @@ set -g status-right-length 80
 # set -g window-status-current-format "#[fg=black,bg=cyan]#[fg=black,bg=cyan,bold] #I  #[fg=black]#W #[fg=cyan,bg=black,nobold]"
 
 # source-file "$HOME/dotfiles/tmux.gruvbox-light.conf"
-source-file "$HOME/dotfiles/tmux.onedark-light.conf"
+source-file "$HOME/dotfiles/tmux.onedark.conf"
 
 # COLORS: gruvbox dark
 # set -g status-left '#[fg=black,bg=colour7,bold] #S #[fg=colour7,bg=colour239,nobold]#[fg=colour7,bg=colour239] #(whoami) #[fg=colour239,bg=colour237]   '
