--- a/.tmux.conf
+++ b/.tmux.conf
@@ -105,7 +105,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'tmux-plugins/tmux-open'
 # set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+#set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'tmux-plugins/tmux-continuum'
 # set -g @plugin 'thewtex/tmux-mem-cpu-load'
 # set -g @plugin 'tmux-plugins/tmux-battery'
