--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,29 +64,13 @@ set-option -g status "on"
 set -g status-left-length 40
 set -g status-right-length 80
 
-# COLOR: grey
-# set -g status-left '#[fg=colour232,bg=colour247] #S #[fg=colour247,bg=colour239]#[fg=colour249,bg=colour239] #(whoami) #[fg=colour239,bg=colour236]   '
-# set -g status-right '#{battery_percentage} #{battery_remain}  #(tmux-mem-cpu-load --interval 10 -a 0 -g0) #[fg=colour239]#[fg=colour249,bg=colour239] %H:%M %a %d/%m/%Y #[fg=colour247]#[fg=colour232,bg=colour247] #h '
-# set -g window-status-format "#[fg=colour247,bg=colour236]  #I#[fg=colour247]  #[bg=colour236]#W  "
-# set -g window-status-current-format "#[fg=colour236,bg=colour239]#[fg=colour249,bg=colour239] #I  #[fg=colour231]#W #[fg=colour239,bg=colour236]"
 
-# COLORS: nord
-# set -g status-left '#[fg=black,bg=blue,bold] #S #[fg=blue,bg=brightblack,nobold]#[fg=blue,bg=brightblack] #(whoami) #[fg=brightblack,bg=black]   '
-# set -g status-right '#[fg=blue] #[fg=brightblack,bg=black]#[fg=blue,bg=brightblack] %H:%M %a %d/%m/%Y #[fg=blue]#[fg=black,bg=blue,bold] #h '
-# set -g window-status-format "#[fg=black,bg=brightblack]#[fg=white,bg=brightblack] #I#[fg=white]  #[bg=brightblack]#W #[fg=brightblack,bg=black]"
-# set -g window-status-current-format "#[fg=black,bg=cyan]#[fg=black,bg=cyan,bold] #I  #[fg=black]#W #[fg=cyan,bg=black,nobold]"
-
-# source-file "$HOME/dotfiles/tmux.gruvbox-light.conf"
-source-file "$HOME/dotfiles/tmux.onedark.conf"
-
-# COLORS: gruvbox dark
-# set -g status-left '#[fg=black,bg=colour7,bold] #S #[fg=colour7,bg=colour239,nobold]#[fg=colour7,bg=colour239] #(whoami) #[fg=colour239,bg=colour237]   '
-# set -g status-right '#[fg=colour239,bg=colour237]#[fg=colour7,bg=colour239] %H:%M %a %d/%m/%Y #[fg=colour7]#[fg=black,bg=colour7,bold] #($HOME/dotfiles/hostname.sh) '
-# set -g window-status-format "#[fg=colour237,bg=colour239]#[fg=white,bg=colour239] #I#[fg=white]  #[bg=colour239]#W #[fg=colour239,bg=colour237]"
-# set -g window-status-current-format "#[fg=colour237,bg=colour109]#[fg=black,bg=colour109,bold] #I  #[fg=black]#W #[fg=colour109,bg=colour237,nobold]"
-# set -g status-fg colour237
-# set -g status-bg colour237
-
+if-shell -b '[ $THEME = "dark" ]' {
+  source-file "$HOME/dotfiles/tmux.onedark.conf"
+}
+if-shell -b '[ $THEME = "light" ]' {
+  source-file "$HOME/dotfiles/tmux.onedark-light.conf"
+}
 
 bind-key -n S-left previous-window
 bind-key -n S-right next-window
