--- a/lazygit.yml
+++ b/lazygit.yml
@@ -2,3 +2,11 @@ keybinding:
   commits:
     moveDownCommit: <c-v>
     moveUpCommit: <c-f>
+
+git:
+  paging:
+    colorArg: always
+    # pager: delta --dark --paging=never
+    pager: delta --light --paging=never
+    # pager: delta --detect-dark-light always --paging=never
+    # pager: delta --dark --paging=never --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
