--- a/.tmux.conf
+++ b/.tmux.conf
@@ -71,6 +71,9 @@ if-shell -b '[ $THEME = "dark" ]' {
   source-file "$HOME/dotfiles/tmux.onedark-light.conf"
 }
 
+
+HOSTNAME="#($HOME/dotfiles/hostname.sh)"
+
 bind-key -n S-left previous-window
 bind-key -n S-right next-window
 
