--- a/tmux.onedark-light.conf
+++ b/tmux.onedark-light.conf
@@ -1,6 +1,6 @@
 # COLORS: onedark light
 set -g status-left '#[fg=#ffffff,bg=#2b5d63,bold] #S #[fg=#2b5d63,bg=#0184bc,nobold]#[fg=#ffffff] #(whoami) #[fg=#0184bc,bg=#dcdcdc]   '
-set -g status-right '#[fg=#0184bc,bg=#dcdcdc]#[fg=#ffffff,bg=#0184bc] %H:%M %a %d/%m/%Y #[fg=#2b5d63]#[fg=#ffffff,bg=#2b5d63,bold] #h '
+set -g status-right "#[fg=#0184bc,bg=#dcdcdc]#[fg=#ffffff,bg=#0184bc] %H:%M %a %d/%m/%Y #[fg=#2b5d63]#[fg=#ffffff,bg=#2b5d63,bold] $HOSTNAME "
 set -g window-status-format "#[fg=#dcdcdc,bg=#c9c9c9]#[fg=black] #I  #W #[fg=#c9c9c9,bg=#dcdcdc]"
 set -g window-status-current-format "#[fg=#dcdcdc,bg=#50a14f]#[fg=#ffffff,bg=#50a14f,bold] #I  #W #[fg=#50a14f,bg=#dcdcdc,nobold]"
 set -g status-fg "black"
